# Ubro-project

Backend-Bot-master/: SETUP.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
Backend-Bot-master/app/: logger.py
Backend-Bot-master/app/backend/: main.py
Backend-Bot-master/app/backend/middlewares/: exception.py
Backend-Bot-master/app/backend/routers/: chat.py  chat_message.py  commission.py  documents.py  driver_document.py  driver_location.py  driver_profile.py  phone_verification.py  ride.py  role.py  transaction.py
Backend-Bot-master/app/crud/: __init__.py  chat_message.py  commission.py  driver_document.py  driver_location.py  driver_profile.py  phone_verification.py  ride.py  role.py  transaction.py  user.py
Backend-Bot-master/app/schemas/: __init__.py  chat_message.py  commission.py  driver_document.py  driver_location.py  driver_profile.py  phone_verification.py  ride.py  role.py  transaction.py
Backend-Bot-master/app/services/: __init__.py  chat_service.py
Backend-Bot-master/archive/: docker-compose-tests.yml
Backend-Bot-master/archive/.github/workflows/: deploy.yml
Backend-Bot-master/archive/scripts/: api_smoke_test.py
Backend-Bot-master/archive/scripts/reports/: TEST_REPORT.md  junit-part.xml  junit.xml  (+2 more)
Backend-Bot-master/archive/tests/: conftest.py  test_db.py
Backend-Bot-master/archive/tests_api_v1/: conftest.py  test_full_swagger.py  test_health.py  test_misc_groups.py  test_rides.py  test_roles.py  test_users.py
Backend-Bot-master/tests_live/: test_full_swagger.py
(+6 files in other folders)
